--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "homepage": "https://haus.wien",
   "dependencies": {
-    "dom-to-image": "^2.6.0",
-    "file-saver": "^2.0.2"
+    "dom-to-image": "^2.6.0"
   }
 }
