slugify filename, add placeholder to empty p tag, focus handling

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://haus.wien",
   "dependencies": {
-    "dom-to-image": "^2.6.0"
+    "dom-to-image": "^2.6.0",
+    "slugify": "^1.4.0"
   }
 }
